<resources>
    <string name="app_name">BCT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_update_default_title">App Update</string>
    <string name="app_update_default_description">Silakan Update Bacot Versi Terbaru !.</string>
    <string name="app_update_positive_text">UPDATE NOW</string>
    <string name="nav_header_title">BCT</string>
    <string name="nav_header_subtitle">Bacot Banget Lu!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="linkheat">https://api.gojekapi.com/v2/heatmap/bike?latitude=</string>
    <string name="daftar">Daftar</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login_here">Sudah punya akun ? Silahkan Login</string>
    <string name="loading">Please wait...</string>
    <string name="create_profile">Register</string>
    <string name="please_enter_your_personal_details_to_create_your_profile">Silahkan isi dengan nama anda untuk aktivasi app</string>
    <string name="name">Masukan nama anda...</string>
    <string name="dd_mm_yyyy">15-08-2015</string>
    <string name="go_pay">GO-PAY</string>
    <string name="go_ride">GO-RIDE</string>
    <string name="go_food">GO-FOOD</string>
    <string name="go_mart">GO-MART</string>
    <string name="go_shop">GO-SHOP</string>
    <string name="go_send">GO-SEND</string>
    <string name="go_med">GO-MED</string>
    <string name="go_kilat">GO-KILAT</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="gojek">gojek</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ambiltoken">AMBIL TOKEN !</string>
    <string name="link1">https://api.gojekapi.com/v2/heatmap/bike?latitude=</string>
    <string name="str_test">sitapp</string>
    <string name="registerissuccess">Register Berhasil !!!</string>
    <string name="title_activity_history">History</string>
    <string name="deactivate_service">Turn the Service Off then uncheck the Mock Location in Developer Settings to avoid issues. If you are still getting fake locations in other apps, restart those apps.</string>
    <string name="title_activity_help">How To Use?</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_data">No Bookmarks</string>
    <string name="save">Save</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="loc_input_hint">Latitude , Longitude</string>
    <string name="s_current_value">Current Value : </string>
    <string name="s_remark">remark</string>
    <string name="s_save_location">Save location</string>
    <string name="s_location_history">Location history</string>
    <string name="s_clear_history">Clear history</string>
    <string name="toast_play_store_unavailable">Google Play Store is not installed.</string>
    <string name="pref_share_app_title">Share app</string>
    <string name="pref_share_app_description">Send app link to friends</string>
    <string name="pref_recommend_apps_title">Recommend apps</string>
    <string name="send_to">Send to</string>
    <string name="s_disclaimer_title">Disclaimer</string>
    <string name="s_disclaimer_summary">It is none of my business if you get some issues.</string>
    <string name="s_agree">Agree</string>
    <string name="s_disagree">Disagree</string>
    <string name="s_exit">Exit</string>
    <string name="s_start">Start</string>
    <string name="s_save">Save</string>
    <string name="s_stop">Stop</string>
    <string name="s_map">Map</string>
    <string name="s_settings">Settings</string>
    <string name="s_choose_time">Choose time</string>
    <string name="s_ok">OK</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_running">Running</string>
    <string name="s_get_location">Get location</string>
    <string name="s_latitude">latitude</string>
    <string name="s_longitude">longitude</string>
    <string name="action_github">Github</string>
    <string name="last_location_received_label">Info Lokasi Terakhir</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="last_update_label">Info Waktu Update:</string>
    <string name="is_location_mock_label">Lokasi Palsu:</string>
    <string name="are_mock_location_apps_present_label">Aplikasi Lokasi Palsu:</string>
    <string name="is_allow_mock_locations_on_label">Apakah Lokasi Palsu Aktif:</string>
    <string name="intro4">We need to access your device location </string>
    <string name="intro5">Let\'s start.</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="noconnection">Oooppss!!! Tidak ada Koneksi Internet</string>
    <string name="action_update">Update</string>
    <string name="action_restart_launcher">Restart Launcher</string>
    <string name="action_show_system_apps">Tampilkan Aplikasi Sistem</string>
    <string name="action_show_package_name">Tampilkan Package Name</string>
    <string name="customer_credit_u">CREDIT</string>
    <string name="default_currency">Rp</string>
    <string name="default_distance_unit">KM</string>
    <string name="default_icon_description">default_description</string>
    <string name="single_trip">* Single Destination</string>
    <string name="module_not_active">Error Xposed framework not available! \n please check that either Xposed is correctly installed or that the module has been activated.</string>
    <string name="jobs_assign_job_notification_message">You have assigned a jobs {JOB_NO}</string>
    <string name="jobs_assign_job_notification_notification">You have assigned a jobs</string>
    <string name="jobs_bid_failed_time_finish">Maaf waktu bid anda sudah habis</string>
    <string name="jobs_bid_job_finish_job">DONE</string>
    <string name="jobs_bid_job_pickup_costumer">PICKED UP COSTUMER</string>
    <string name="jobs_bid_lose_message">Maaf anda gagal mendapatkan job ini</string>
    <string name="jobs_bid_notification_popup_num_job">{COUNT} JOB</string>
    <string name="jobs_bid_notification_popup_summary_job">Anda mendapatkan notifikasi</string>
    <string name="jobs_bid_win_message">Selamat anda memenangkan job ini</string>
    <string name="jobs_bidding_expired">Sorry, your job bidding {JOB_ID} is expired</string>
    <string name="jobs_bidding_lose">You have lose for jobs bidding {JOB_ID}</string>
    <string name="jobs_bidding_win_notif">You have won for jobs bidding {JOB_ID}</string>
    <string name="jobs_booking_cancel">Maaf, booking ini sudah dicancel</string>
    <string name="jobs_booking_cancel_id">Maaf, booking {ID} sudah dicancel</string>
    <string name="jobs_booking_driver_cancel">Booking berhasil dicancel</string>
    <string name="jobs_booking_expired">Maaf booking sudah expired</string>
    <string name="jobs_booking_finish">Booking anda sudah selesai</string>
    <string name="jobs_booking_phone_customer_sender_not_found">Nomor telepon customer atau pengirim tidak tersedia</string>
    <string name="jobs_booking_phone_receiver_not_found">Nomor telepon penerima tidak tersedia</string>
    <string name="jobs_close_booking_notification_message">Booking {ID} sudah diclose oleh call center</string>
    <string name="jobs_close_booking_notification_title">Booking anda sudah diclose oleh call center</string>
    <string name="jobs_close_route_message">Rute booking sudah diclose</string>
    <string name="jobs_close_route_notification_message">Rute booking {ID} sudah diclose</string>
    <string name="jobs_close_route_notification_title">Rute booking sudah diclose</string>
    <string name="jobs_default_address1_line1_dropoff">Telkom Gambir, Jl Medan Merdeka no.7</string>
    <string name="jobs_default_address1_line1_pickup">Nostra, Jl Ciasem 1 no.36</string>
    <string name="jobs_default_address1_line2_dropoff">Kebayoran, Jakarta</string>
    <string name="jobs_default_address1_line2_pickup">Kebayoran, Jakarta</string>
    <string name="jobs_default_distance">00.0 km</string>
    <string name="jobs_default_order_id">ID-00000</string>
    <string name="jobs_default_order_id_template">ID-{ORDER_NO}</string>
    <string name="jobs_default_price">Rp 00.000</string>
    <string name="jobs_default_type">*Transportation</string>
    <string name="jobs_edit_booking_notification_message">Booking {ID} sudah diedit customer</string>
    <string name="jobs_edit_booking_notification_title">Booking anda sudah diedit customer</string>
    <string name="jobs_failed_display_jobs_detail">Gagal menampilkan data booking, refresh booking atau hubungi call center anda.</string>
    <string name="jobs_goto_dropoff">Menuju destinasi</string>
    <string name="jobs_goto_next_destination">Silahkan menuju ke tujuan selanjutnya</string>
    <string name="jobs_goto_pickup">Menuju penjemputan</string>
    <string name="jobs_goto_status">Status : {STATUS}</string>
    <string name="jobs_job_button_cancel">Cancel</string>
    <string name="jobs_job_button_done">Done</string>
    <string name="jobs_job_button_pickup">Pickup</string>
    <string name="jobs_job_call_button">Customer</string>
    <string name="jobs_job_call_receiver">Penerima</string>
    <string name="jobs_job_call_restaurant">Restaurant</string>
    <string name="jobs_job_call_sender">Pengirim</string>
    <string name="jobs_job_distance_title">JARAK</string>
    <string name="jobs_job_total_fee_title">TOTAL BIAYA</string>
    <string name="jobs_job_total_shop_price">BIAYA BELANJA</string>
    <string name="jobs_message_booking_close">Booking ini sudah ditutup call center</string>
    <string name="jobs_message_booking_close_id">Booking {ID} sudah ditutup call center</string>
    <string name="jobs_new_job_accept_button">ACCEPT</string>
    <string name="jobs_new_job_bid_button">AMBIL BOOKING</string>
    <string name="jobs_new_job_bidding_notification">You have received a new job</string>
    <string name="jobs_new_job_cancel_confirm">Are you sure you want to cancel this job ?</string>
    <string name="jobs_new_job_delete_confirm">Are you sure you want to delete this job ?</string>
    <string name="jobs_new_job_label_customer_name">Nama Customer</string>
    <string name="jobs_new_job_label_destination">Tujuan</string>
    <string name="jobs_new_job_label_item_price_title">Total Harga</string>
    <string name="jobs_new_job_label_item_receiver_title">Penerima</string>
    <string name="jobs_new_job_label_job_information">Informasi Booking</string>
    <string name="jobs_new_job_label_list_gofood">DAFTAR MENU</string>
    <string name="jobs_new_job_label_origin">Jemput</string>
    <string name="jobs_new_job_label_to">KE</string>
    <string name="jobs_new_job_label_total_distance">Jarak</string>
    <string name="jobs_new_job_label_total_fee">Biaya</string>
    <string name="jobs_new_job_notification_message">You have received {JOB_NUM} new jobs.</string>
    <string name="jobs_new_job_notification_title">Gojek Driver</string>
    <string name="jobs_new_job_save_message">Your job is saved successfully</string>
    <string name="jobs_new_job_to_booking_button">KEMBALI KE BOOKING</string>
    <string name="search_apps">Cari Aplikasi...</string>
    <string name="msg_hide_from_system_apps">Hide from system apps</string>
    <string name="apply">OK</string>
</resources>