<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_dark"
    android:windowSoftInputMode="stateHidden"
    tools:context=".ui.AppHideConfigurationActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/subSettingsInputSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:editable="true"
        android:textColorHint="@color/white"
        android:enabled="true"
        android:hint="@string/search_apps"
        android:inputType="text"
        android:windowSoftInputMode="stateHidden" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/hide_from_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.97"
            android:checked="false"
            android:textColor="@color/white"
            android:text="@string/msg_hide_from_system_apps" />

        <Button
            android:id="@+id/configApplyButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:background="@color/green_dark"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/apply" />
    </LinearLayout>


    <ListView
        android:id="@+id/subsettings_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="true"
        android:choiceMode="none" />

</LinearLayout>