<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grean900">

        <Switch
            android:id="@+id/sw_autobid"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:drawableStart="@drawable/ic_motorcycle_white_24dp"
            android:drawableLeft="@drawable/ic_motorcycle_white_24dp"
            android:text=" BCT Autobid"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/seekbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey800"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Seek_jarak"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="SETELAN JARAK"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_jarakSET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Seek_jarak"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="10dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textMin1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textMax1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="25"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeSeekbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:bar_color="#f7888c"
                app:bar_highlight_color="#ea1017"
                app:left_thumb_color="#990d16"
                app:left_thumb_color_pressed="@color/colorAccent"
                app:left_thumb_image="@color/colorAccent"
                app:max_value="25"
                app:min_value="0"
                app:right_thumb_color="#990d12"
                app:right_thumb_color_pressed="@color/colorAccent"
                app:right_thumb_image="@color/colorAccent"
                app:steps="1" />

            <TextView
                android:id="@+id/tv_intervalSET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Seek_jarak"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey900">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="366dp"
            android:background="@color/grey900"
            android:orientation="vertical">

            <Switch
                android:id="@+id/bid_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_wallet"
                android:drawableLeft="@drawable/ic_wallet"
                android:text="@string/go_pay"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <Switch
                android:id="@+id/bid_ride"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/go_ride"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/bid_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_food"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/bid_mart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_mart"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/bid_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_shop"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/bid_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_send"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/bid_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_med"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Switch
                android:id="@+id/bid_kil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/go_kilat"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>