<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apc="http://schemas.android.com/apk/lib/com.root.rootcheck"
    xmlns:dist="http://schemas.android.com/apk/distribution"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/white"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bct"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BACOT"/>
        <EditText
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:id="@+id/register_email_editText"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_play"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_play"/>
        <EditText
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:id="@+id/register_password_editText"
            android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password" android:singleLine="true" android:drawableLeft="@drawable/ic_play" android:drawablePadding="10dp" android:inputType="text" android:drawableStart="@drawable/ic_play"/>
        <Button
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/register_button"
            android:background="@color/gray_dark"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:text="@string/daftar"
            android:textAllCaps="true"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#000000"
            android:gravity="center"
            android:id="@+id/register_login_link_textView"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login_here"/>
        <ProgressBar
            android:layout_gravity="bottom|center_vertical|center_horizontal|center"
            android:id="@+id/profile_progressBar"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="bottom"
        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
        android:orientation="horizontal"
        android:background="@color/gray_dark"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="all right reserved | SIT APP"/>
    </LinearLayout>
</FrameLayout>